--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="/">atmos.org</a></h1>
-        <!-- <p>Where's Corey now?</p> -->
+        <h1><a href="/">Tim Cameron</a></h1>
 
         <!-- <h3>The Goods</h3> -->
         <p class="view"><a href="/projects.html">Open Source Projects<small>Code that Might be Useful to You</small></a></p>
@@ -80,10 +79,8 @@
         {% endif %}
 
         <h3>Follow Me On</h3>
-        <p class="view"><a href="https://github.com/atmos" target="tab">GitHub<small>If coding is your thing</small></a></li>
-        <p class="view"><a href="https://twitter.com/atmos" target="tab">Twitter<small>If you tweet</small></a></li>
-        <p class="view"><a href="http://tumblr.atmos.org" target="tab">Tumblr<small>If you're ADD</small></a></li>
-        <p class="view"><a href="http://flickr.com/photos/atmos" target="tab">Flickr<small>If you like photos</small></a></li>
+        <p class="view"><a href="https://github.com/timcameron" target="tab">GitHub<small>If coding is your thing</small></a></li>
+        <p class="view"><a href="https://twitter.com/timcammm" target="tab">Twitter<small>If you tweet</small></a></li>
 
       </header>
       <section id="main">
