--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
         <h1><a href="/">Tim Cameron</a></h1>
 
         <!-- <h3>The Goods</h3> -->
-        <p class="view"><a href="/projects.html">Open Source Projects<small>Code that Might be Useful to You</small></a></p>
+        <p class="view"><a href="http://spark.rstudio.com/tim/AusEmploymentFlows/">Labour market flows in Australia<small></br>Built with <a href="http://shiny.rstudio.com/" Shiny </small></a></p>
         <p class="view"><a href="/speaking.html">Talks I've Given<small>On Technologies and Ideas</small></a></p>
 
         {% if page.repository_url %}
