--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,9 @@
         <h1><a href="/">Tim Cameron</a></h1>
 
         <!-- <h3>The Goods</h3> -->
-        <p class="view"><a href="http://spark.rstudio.com/tim/AusEmploymentFlows/">Labour market flows in Australia<small></br>Built with <a href="http://shiny.rstudio.com/" Shiny </small></a></p>
-        <p class="view"><a href="/speaking.html">Talks I've Given<small>On Technologies and Ideas</small></a></p>
+        <p class="view"><a href="http://spark.rstudio.com/tim/AusEmploymentFlows/">Labour market flows in Australia<small>Built with <a href="http://shiny.rstudio.com/"> Shiny </a></small></p>
+        <p class="view"><a href="https://timcameron.shinyapps.io/demo3/">Map of Australian Population by postcode<small>Also built with <a href="http://shiny.rstudio.com/"> Shiny </a></small></p>
+ 
 
         {% if page.repository_url %}
           <h3>Project Info</h3>
