Fix broken link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,8 @@
         <h1><a href="/">Tim Cameron</a></h1>
 
         <!-- <h3>The Goods</h3> -->
-        <p class="view"><a href="http://spark.rstudio.com/tim/AusEmploymentFlows/">Labour market flows in Australia<small>Built with <a href="http://shiny.rstudio.com/"> Shiny </a></small></p>
-        <p class="view"><a href="https://timcameron.shinyapps.io/demo3/">Map of Australian Population by postcode<small>Also built with <a href="http://shiny.rstudio.com/"> Shiny </a></small></p>
+        <p class="view"><a href="http://spark.rstudio.com/tim/AusEmploymentFlows/">Labour market flows in Australia<small>Built with Shiny</small></p>
+        <p class="view"><a href="https://timcameron.shinyapps.io/demo3/">Map of Australian Population by postcode<small>Also built with Shiny </small></p>
  
 
         {% if page.repository_url %}
