--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,6 +82,7 @@
         <h3>Follow Me On</h3>
         <p class="view"><a href="https://github.com/timcameron" target="tab">GitHub<small>If coding is your thing</small></a></li>
         <p class="view"><a href="https://twitter.com/timcammm" target="tab">Twitter<small>If you tweet</small></a></li>
+        <p class="view"><a href="https://www.linkedin.com/profile/view?id=96890364" target="tab">LinkedIn</a></li>
 
       </header>
       <section id="main">
