Update urls, add thesis

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,10 @@
         <h1><a href="/">Tim Cameron</a></h1>
 
         <!-- <h3>The Goods</h3> -->
-        <p class="view"><a href="http://spark.rstudio.com/tim/AusEmploymentFlows/">Labour market flows in Australia<small>Built with Shiny</small></p>
+        <p class="view"><a href="https://timcameron.shinyapps.io/ausemploymentflows//">Labour market flows in Australia<small>Built with Shiny</small></p>
         <p class="view"><a href="https://timcameron.shinyapps.io/demo3/">Map of Australian Population by postcode<small>Also built with Shiny </small></p>
+        <p class="view"><a href="https://www.dropbox.com/s/60hlt7d5nzce6lx/Final.pdf?dl=0">Honours thesis<small>On overconfidence in marathon runners</small></p>
+        <p class="view"><a href="http://grattan.edu.au/report/super-sting-how-to-stop-australians-paying-too-much-for-superannuation/">Super Sting<small>How to stop Australians paying too much for superannuation </small></p>
  
 
         {% if page.repository_url %}
@@ -80,8 +82,8 @@
         {% endif %}
 
         <h3>Follow Me On</h3>
-        <p class="view"><a href="https://github.com/timcameron" target="tab">GitHub<small>If coding is your thing</small></a></li>
-        <p class="view"><a href="https://twitter.com/timcammm" target="tab">Twitter<small>If you tweet</small></a></li>
+        <p class="view"><a href="https://github.com/timcameron" target="tab">GitHub</a></li>
+        <p class="view"><a href="https://twitter.com/timcammm" target="tab">Twitter</a></li>
         <p class="view"><a href="https://www.linkedin.com/profile/view?id=96890364" target="tab">LinkedIn</a></li>
 
       </header>
